--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: compareVariableDemoVue
 Type: Package
 Title: Study opensilex variables
 Version: 0.1.0
-Author: Jean-Eudes Hollebecq, Arnaud Charleroy
-Maintainer: Arnaud Charleroy <arnaud.charleroy@inra.fr>
+Author: Jean-Eudes Hollebecq
+Maintainer: Jean-Eudes Hollebecq
 Description: A package R to visualize environment data and experience Vue.js framework.
 License: AGPL-3
 Encoding: UTF-8
