--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Study opensilex variables
 Version: 0.1.0
 Author: Jean-Eudes Hollebecq
-Maintainer: Jean-Eudes Hollebecq
+Maintainer: Jean-Eudes Hollebecq <jean-eudes.hollebecq@inra.fr>
 Description: A package R to visualize environment data and experience Vue.js framework.
 License: AGPL-3
 Encoding: UTF-8
