--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ export(getDataVar)
 export(plotVarDemo)
 export(variableList)
 importFrom(magrittr,"%>%")
+importFrom(phisWSClientR,connectToPHISWS)
 importFrom(phisWSClientR,getEnvironmentData)
 importFrom(phisWSClientR,getVariables2)
-importFrom(phisWSClientR,initializeClientConnection)
 importFrom(plotly,add_trace)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
